# NimbleCAS

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
cmake/: CanonicalFlags.cmake  StdModule.cmake
config/: cpp_details.txt  toolchain.cmake  tsan.supp  update_policy.txt
docs/: Index.md  PRD.md  QUICKSTART.md  ROADMAP.md  SKILLS.md
docs/architecture/: overview.md  parallel-tree-computation.md  wasm-build.md
docs/examples/: inteq-multimethod.md  pde-multimethod.md
docs/guides/: financial-mathematics.md
docs/reference/: algnum.md  analysis.md  analytics.md  bandsolve.md  bigcombinatorics.md  bigdecimal.md  bigeigen.md  bigfloat.md  bigint.md  bigmatrix.md  bigpowerseries.md  bigrational.md  bitcsp.md  bitset.md  bondstrat.md  cache.md  calcvar.md  cheigen.md  cmatrix.md  combinatorics.md  complex.md  compsense.md  constants.md  contfrac.md  control.md  core.md  csp.md  currency.md  dae.md  dde.md  diff.md  doubledouble.md  dynamics.md  eigen.md  execdoc.md  exotics.md  expand.md  extrapolation.md  factor.md  fft.md  (+94 more)
docs/session_logs/: 2026-07-04-section7-batches-3-5.md  2026-07-18-financial-mathematics-suite.md
docs/technical/: finance-parity-roadmap.md
docs/testing/: sanitizers.md
examples/: finance_showcase.cpp  rng_bench.cpp
python/cutile/: black_scholes.py
python/triton/: black_scholes.py  mc_option.py  poly_eval.py  test_poly_eval.py
scripts/: backup_to_nas.sh  build-wasm-slice.sh  build.sh  build_common.sh  build_msan.sh  build_wasm.sh  build_win.sh  setup_python.sh
src/algnum/: algnum.cppm
src/analysis/: analysis.cppm
src/analytics/: analytics.cppm
src/bandsolve/: bandsolve.cppm
src/bigcombinatorics/: bigcombinatorics.cppm
src/bigdecimal/: bigdecimal.cppm
src/bigeigen/: bigeigen.cppm
src/bigfloat/: bigfloat.cppm
src/bigint/: bigint.cppm
src/bigmatrix/: bigmatrix.cppm
src/bigpowerseries/: bigpowerseries.cppm
src/bigrational/: bigrational.cppm
src/bindings/: bindings.cpp
src/bitcsp/: bitcsp.cppm
src/bitset/: bitset.cppm
src/bondstrat/: bondstrat.cppm
src/cache/: cache.cppm
src/calcvar/: calcvar.cppm
src/cheigen/: cheigen.cppm
src/cmatrix/: cmatrix.cppm
src/combinatorics/: combinatorics.cppm
src/complex/: complex.cppm
src/compsense/: compsense.cppm
src/constants/: constants.cppm
src/contfrac/: contfrac.cppm
src/control/: control.cppm
src/core/: core.cppm
src/csp/: csp.cppm
src/currency/: currency.cppm
src/dae/: dae.cppm
src/dde/: dde.cppm
src/diff/: diff.cppm
src/doubledouble/: doubledouble.cppm
src/dynamics/: dynamics.cppm
src/eigen/: eigen.cppm
src/execdoc/: execdoc.cppm
src/exotics/: exotics.cppm
src/expand/: expand.cppm
src/extrapolation/: extrapolation.cppm
src/factor/: factor.cppm
src/fft/: fft.cppm
src/finance/: finance.cppm
src/fixedincome/: fixedincome.cppm
src/forms/: forms.cppm
src/frobenius/: frobenius.cppm
src/futures/: futures.cppm
src/fxstrat/: fxstrat.cppm
src/gpu/: gpu.cppm  gpu_bridge.h  gpu_kernels.cu
src/hmm/: hmm.cppm
src/hyptest/: hyptest.cppm
src/int128/: int128.cppm
src/integrate/: integrate.cppm
src/inteq/: inteq.cppm
src/interpolation/: interpolation.cppm
src/ipm/: ipm.cppm
src/jordan/: jordan.cppm
src/kronprod/: kronprod.cppm
src/krylov/: krylov.cppm
src/laplace/: laplace.cppm
src/latex/: latex.cppm
src/laurent/: laurent.cppm
src/lie/: lie.cppm
src/limits/: limits.cppm
src/logic/: logic.cppm
src/lp/: lp.cppm
src/marketdata/: marketdata.cppm
src/matdecomp/: matdecomp.cppm
src/matexp/: matexp.cppm
src/matrix/: matrix.cppm
src/matstruct/: matstruct.cppm
src/mcmc/: mcmc.cppm
src/mechanics/: mechanics.cppm
src/mmstrat/: mmstrat.cppm
src/montecarlo/: montecarlo.cppm
src/nlsolve/: nlsolve.cppm
src/numbertheory/: numbertheory.cppm
src/numeigen/: numeigen.cppm
src/numeric/: numeric.cppm
src/ode/: ode.cppm
src/optimize/: optimize.cppm
src/optstrat/: optstrat.cppm
src/orthopoly/: orthopoly.cppm
src/pade/: pade.cppm
src/parallel/: parallel.cppm
src/pde/: pde.cppm
src/pdeham/: pdeham.cppm
src/pdenum/: pdenum.cppm
src/perturbation/: perturbation.cppm
src/pfd/: pfd.cppm
src/polyexpr/: polyexpr.cppm
src/polynomial/: polynomial.cppm
src/portfolio/: portfolio.cppm
src/powerseries/: powerseries.cppm
src/pricing/: pricing.cppm
src/probdist/: probdist.cppm
src/probmethod/: probmethod.cppm
src/qmc/: qmc.cppm
src/qrschur/: qrschur.cppm
src/quantum/: quantum.cppm
src/ratint/: ratint.cppm
src/ratpoly/: ratpoly.cppm
src/reader/: reader.cppm
src/recurrence/: recurrence.cppm
src/resultant/: resultant.cppm
src/riskextra/: riskextra.cppm
src/rng/: rng.cppm
src/roots/: roots.cppm
src/rothstein/: rothstein.cppm
src/sat/: sat.cppm
src/sde/: sde.cppm
src/search/: search.cppm
src/semigroup/: semigroup.cppm
src/series/: series.cppm
src/simd/: simd.cppm
src/simplify/: simplify.cppm
src/singpert/: singpert.cppm
src/smc/: smc.cppm
src/solve/: solve.cppm
src/spectral/: spectral.cppm
tests/: algnum_tests.cpp  analysis_tests.cpp  analytics_tests.cpp  bandsolve_tests.cpp  bigcombinatorics_tests.cpp  bigdecimal_tests.cpp  bigeigen_tests.cpp  bigfloat_tests.cpp  bigint_tests.cpp  bigmatrix_tests.cpp  bigpowerseries_tests.cpp  bigrational_tests.cpp  bitcsp_tests.cpp  bitset_tests.cpp  bondstrat_tests.cpp  cache_tests.cpp  calcvar_tests.cpp  cheigen_tests.cpp  cmatrix_tests.cpp  combinatorics_tests.cpp  complex_tests.cpp  compsense_tests.cpp  constants_tests.cpp  contfrac_tests.cpp  control_tests.cpp  core_tests.cpp  csp_tests.cpp  currency_tests.cpp  dae_tests.cpp  dde_tests.cpp  diff_tests.cpp  doubledouble_tests.cpp  dynamics_tests.cpp  eigen_tests.cpp  execdoc_multimethod_tests.cpp  execdoc_tests.cpp  exotics_tests.cpp  expand_tests.cpp  extrapolation_tests.cpp  factor_tests.cpp  (+106 more)
tools/: cpu_bench.cpp  mc_bench.cpp
web/: README.md  app.html  app.js  cas-repl.html  index.html  kernel.wasm  nimblecas.js  nimblecas.wasm  renderer.js  sample-document.json  shaders.wgsl
(+16 files in other folders)
